--- a/package.json
+++ b/package.json
@@ -4,19 +4,24 @@
   "private": true,
   "scripts": {
     "start": "tsc && node ./bin/www",
-    "start:dev": "nodemon --ext ts --exec \"npm run start\"",
+    "start:dev": "env-cmd -f ./dev.env nodemon --ext ts --exec \"npm run start\"",
     "install:prod": "npm install --only=prod"
   },
   "dependencies": {
     "cookie-parser": "1.4.4",
     "debug": "2.6.9",
+    "env-cmd": "10.1.0",
     "express": "4.17.1",
-    "morgan": "1.9.1"
+    "morgan": "1.9.1",
+    "yamljs": "0.3.0"
   },
   "devDependencies": {
     "@types/cookie-parser": "1.4.2",
     "@types/express": "4.17.2",
     "@types/morgan": "1.7.37",
-    "nodemon": "2.0.2"
+    "@types/swagger-ui-express": "4.1.1",
+    "@types/yamljs": "0.2.30",
+    "nodemon": "2.0.2",
+    "swagger-ui-express": "4.1.3"
   }
 }
