--- a/package.json
+++ b/package.json
@@ -12,15 +12,14 @@
     "debug": "2.6.9",
     "env-cmd": "10.1.0",
     "express": "4.17.1",
-    "morgan": "1.9.1",
-    "yamljs": "0.3.0"
+    "jsonwebtoken": "8.5.1",
+    "morgan": "1.9.1"
   },
   "devDependencies": {
     "@types/cookie-parser": "1.4.2",
     "@types/express": "4.17.2",
     "@types/morgan": "1.7.37",
     "@types/swagger-ui-express": "4.1.1",
-    "@types/yamljs": "0.2.30",
     "nodemon": "2.0.2",
     "swagger-ui-express": "4.1.3"
   }
